sponsor side fixed w/o reports

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
         <link rel="stylesheet" href="/static/components/styles.css">
+        <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
         <title>AdVeri</title>
     </head>
     <body>
